-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 3.1.0-beta
-
None
-
Windows
-
31799cc3040128e8328a8bf34284f2d5d62a2285
When trying to revert a chunk in the Git file diff view, it fails with following error:
23:04 Executing in C:\dev\qt-creator: patch -p0 -R Unable to launch 'patch': Process failed to start: No such file or directory
The msysgit installation on Windows contains patch.exe, and I did set the path "c:\Program Files (x86)\Git\bin" in the Git options. Couldn't we assume tha this is a standard situation on Windows and search for patch.exe in that path as-well?
For Gerrit Dashboard: QTCREATORBUG-11637 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
79986,4 | Vcs: Use additional tools paths from VCS systems | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |