Vcs: Use additional tools paths from VCS systems

Use the additional tools installed by VCS tools in the generic
Vcs settings to find patch and ssh-askpass.

Task-number: QTCREATORBUG-11637
Change-Id: Icfd297af56710861316efbe2fec1f4dc440370b2
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>